tests/paczka1/fuzzy1/97939775.err
Error in line 10: r75p A599 73,0
Error in line 11: r75p A598 78,8
Error in line 5: A598 A599 3,7
Error in line 16: A598 A598 93,3
Error in line 22: bGE S201 5,3
Error in line 24: bGE A598 86,94
Error in line 23: bGE A598 36,6
Error in line 32: r75p A598 28,0
Error in line 37: QSVn2y S201 66,1
Error in line 34: Io0DfSD A598 58,2
